# Competitive-Pricing-Intelligence-Platform-for-E-commerce-Sellers

./: README.md  pyproject.toml  requirements.txt
data/: price_monitor.db
data/exports/: alerts.xlsx  latest_prices.xlsx  price_history.xlsx
data/mock_pages/: demomarket.html  pricehub.html  shopradar.html
data/seed/: demo_catalog.json
src/: __init__.py  cli.py  config.py
src/dashboard/: app.py
src/dashboard/components/: filters.py
src/dashboard/pages/: __init__.py
src/database/: __init__.py  models.py  repository.py  session.py
src/schemas/: __init__.py  product_snapshot.py
src/scrapers/: __init__.py  base.py  demo_store.py  playwright_client.py  selectors.yaml
src/services/: __init__.py  alert_engine.py  analytics_service.py  demo_data.py  export_service.py  price_history.py
tests/: test_alert_engine.py  test_export_service.py  test_price_history.py  test_scraper_demo.py
v/cache/: nodeids
