[project]
name = "ecommerce-price-monitor"
version = "0.1.0"
description = "E-commerce competitive price monitoring system with scraping, historical pricing, alerts, Excel exports, and dashboarding."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pandas>=2.2.0",
    "SQLAlchemy>=2.0.0",
    "streamlit>=1.36.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "playwright>=1.45.0",
    "PyYAML>=6.0.1",
    "loguru>=0.7.2",
    "altair>=5.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
